# Chicken-Dinner

./: .gitignore  AGENTS.md  BACKEND_REPORT.md  README.md  SUMMARY.md  attack_main.py  main.py  mirror_diagnosis.md  pyproject.toml  settings.blackbox.batch.json  settings.blackbox.json  settings.sample.json
attack_agent/: __init__.py  attack_agent.py  config.py  executor.py  garak_loader.py  judge.py  mutations.py  probes.py  rewrites.py
blackbox/: AGENTS.md  simple-rag-server.py
blackbox/data/: news.txt  secrets.txt
chainlit_app/: app.py
docs/: ATTACK_1.json  ATTACK_1.md  MIRROR_PLAN.md  OPENAI_AGENTS_DOCS.md  QUICKSTART_CHAINLIT.md  TEST_SCENARIOS_AND_IMPROVEMENTS.md  attack_Agent.md  judge_Agents.md
mirror/: attack_engine.py  attack_library.py  attack_utils.py  autopilot.py  cli.py  config.py  detectors.py  events.py  garak_cli.py  guardrail.py  guardrail_rules.py  judge_engine.py  mirror_models.py  mirror_orchestrator.py  mirror_planner.py  mirror_settings.py  mirror_tools.py  progress.py  red_agent.py  reporting.py  tools.py  workspace.py
mirror/agents/: __init__.py  attack_engine.py  attack_library.py  attack_utils.py  judge_engine.py  red_agent.py
mirror/analysis/: __init__.py  reporting.py  white_box.py
mirror/core/: __init__.py  models.py  orchestrator.py  prompts.py  tools.py
mirror/defense/: __init__.py  detectors.py  guardrail.py  guardrail_rules.py
mirror/mirror_system/: __init__.py  models.py  orchestrator.py  planner.py  settings.py  tools.py
mirror/storage/: __init__.py  brain.py  workspace.py
mirror/toxic/: engine.py  generator.py  (+1 more)
scripts/: run_blackbox.sh  run_chainlit.sh  run_streamlit.sh
streamlit_app/: app.py
tests/: mock_target.py
